--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hpprinter",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "hpprinter",
   "author": {
     "name": "Richard",
@@ -17,6 +17,9 @@
     "url": "https://github.com/rtreichl/ioBroker.hpprinter"
   },
   "dependencies": {
+    "request": "^2.88.2",
+    "xml2js": "^0.4.23",
+    "ping": "^0.4.0",
     "@iobroker/adapter-core": "^2.4.0"
   },
   "devDependencies": {
